--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,32 @@ black==24.8.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cssbeautifier==1.15.1
+cycler==0.12.1
 dill==0.3.8
+djlint==1.34.1
+EditorConfig==0.12.4
+fonttools==4.53.1
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 idna==3.7
 isort==5.13.2
+Jinja2==3.1.4
+jsbeautifier==1.15.1
+json5==0.9.25
+kiwisolver==1.4.5
 loguru==0.7.2
+MarkupSafe==2.1.5
+matplotlib==3.9.1.post1
 mccabe==0.7.0
+mpld3==0.5.10
 mypy-extensions==1.0.0
+numpy==2.0.1
 packaging==24.1
 pathspec==0.12.1
+pillow==10.4.0
 platformdirs==4.2.2
 psycopg==3.2.1
 psycopg-binary==3.2.1
@@ -20,9 +38,15 @@ psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 pylint==3.2.6
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2023.12.25
 requests==2.32.3
+six==1.16.0
 tomli==2.0.1
 tomlkit==0.13.0
+tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.2
