--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+anyio==4.4.0
 astroid==3.2.4
 black==24.8.0
 certifi==2024.7.4
@@ -9,24 +10,34 @@ contourpy==1.2.1
 cssbeautifier==1.15.1
 cycler==0.12.1
 dill==0.3.8
+distro==1.9.0
 djlint==1.34.1
 EditorConfig==0.12.4
+exceptiongroup==1.2.2
 fonttools==4.53.1
+h11==0.14.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 isort==5.13.2
 Jinja2==3.1.4
+jiter==0.5.0
 jsbeautifier==1.15.1
 json5==0.9.25
 kiwisolver==1.4.5
 loguru==0.7.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.1.post1
 mccabe==0.7.0
+mdformat==0.7.17
+mdurl==0.1.2
 mpld3==0.5.10
 mypy-extensions==1.0.0
 numpy==2.0.1
+openai==1.40.6
 packaging==24.1
 pathspec==0.12.1
 pillow==10.4.0
@@ -45,6 +56,7 @@ PyYAML==6.0.2
 regex==2023.12.25
 requests==2.32.3
 six==1.16.0
+sniffio==1.3.1
 tomli==2.0.1
 tomlkit==0.13.0
 tqdm==4.66.5
